fix flickering hover state

--- a/css/graphic.less
+++ b/css/graphic.less
@@ -113,7 +113,7 @@ p {
     opacity: 0;
 }
 
-.slopes .hovered line {
+.slopes .hovered line.line {
     stroke-width: 4px;
 }
 
